--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ classifiers = [
     "Operating System :: OS Independent"
 ]
 dependencies = [
+    "rich",
+    "anthropic>=0.18.0",
+    "click",
+    "sentence-transformers",
     "click>=8.0.0",
     "numpy>=1.20.0",
     "sentence-transformers>=2.0.0"
