modified compressor.py to correctly place NLTK tokenizer files

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ store/
 
 # NLTK data directory (builds when necessary)
 ./data/nltk_data/tokenizers/punkt/
+
+# Ignore all .DS_Store files in the project
+**/.DS_Store
