1. Fixed language/compression chains 2. Added inspection tools with sorting by date 3. Fixed `add_with_full` implementation 4. Added debug logging 5. Fixed context management in `AnthropicClient`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "sentence-transformers>=2.0.0",
     "datetime",
     "dateparse",
+    "nltk>=3.8.2",
 ]
 
 [project.scripts]
