--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "numpy>=1.20.0",
     "sentence-transformers>=2.0.0",
     "datetime",
-    "dateparse",
+    "dateparser",
     "nltk>=3.8.2",
 ]
 
