--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,12 @@ pyte
 redis>=5.0.1
 chromadb>=0.4.22
 llama-index>=0.9.10
+duckdb
+torch
+llama-index-core>=0.10.0
+llama-index-embeddings-huggingface>=0.1.0
+llama-index-vector-stores-chroma>=0.1.0
+llama-index-storage-redis>=0.1.0
+chromadb>=0.4.22
+sentence-transformers>=2.5.0
+redis>=5.0.0
