databases connected again

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,10 @@ dependencies = [
     "llama-index-storage-index-store-redis>=0.1.0",
     "duckdb",
     "torch",
-    "neo4j==5.15.0" 
+    "neo4j==5.15.0",
+    "httpx>=0.26.0",
+    "fastapi>=0.109.0",
+    "pydantic>=2.5.3"
 ]
 
 [project.scripts]
