--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "pyte",
     "redis>=5.0.1",
     "chromadb>=0.4.22",
+    "chromadb-client>=0.6.2",
     "llama-index-core>=0.10.0",
     "llama-index-embeddings-huggingface>=0.1.0",
     "llama-index-vector-stores-chroma>=0.1.0",
