basic multi-model functionality with granite 2b

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 version: '3.8'
 
+# Cross-platform configuration for the Digital Trinity + Local AI
 services:
-  # The Digital Trinity + Local AI Companion
   neo4j:
     image: neo4j:5.15.0
     environment:
       - NEO4J_AUTH=neo4j/${NEO4J_PASSWORD:-scR4Mble#Graph!}
       - NEO4J_PLUGINS=["graph-data-science", "apoc"]
+      # Memory settings for Neo4j
+      - NEO4J_server_memory_heap_initial__size=512m
+      - NEO4J_server_memory_heap_max__size=2G
+      - NEO4J_server_memory_pagecache_size=1G
     ports:
       - "7474:7474"  # Browser interface
       - "7687:7687"  # Bolt protocol
@@ -37,6 +41,12 @@ services:
       retries: 5
     depends_on:
       - redis
+    deploy:
+      resources:
+        limits:
+          memory: 4G
+        reservations:
+          memory: 1G
 
   redis:
     image: redis:7
@@ -44,12 +54,18 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: redis-server --save 60 1 --loglevel warning
+    command: redis-server --save 60 1 --loglevel warning --maxmemory 2gb --maxmemory-policy allkeys-lru
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       timeout: 3s
       retries: 5
+    deploy:
+      resources:
+        limits:
+          memory: 3G
+        reservations:
+          memory: 1G
 
   ollama:
     image: ollama/ollama
@@ -65,10 +81,22 @@ services:
     deploy:
       resources:
         limits:
-          memory: 8G  # Adjust based on your needs
+          memory: 20G
+          cpus: '8'
+        reservations:
+          memory: 16G
+          cpus: '4'
     environment:
       - OLLAMA_HOST=0.0.0.0
       - OLLAMA_ORIGINS=http://localhost:11434
+      # Platform-specific GPU settings
+      - OLLAMA_DEVICE=${OLLAMA_DEVICE:-cpu}  # Set to 'mps' for Mac, 'cuda' for NVIDIA, 'rocm' for AMD
+    # Optional platform-specific device mounts (commented by default)
+    # devices:
+    #   - /dev/nvidia0:/dev/nvidia0  # For NVIDIA GPUs
+    #   - /dev/kfd:/dev/kfd          # For AMD GPUs
+    # Optional: Allow MPS access on Mac
+    # privileged: true               # Uncomment for GPU access on some platforms
 
 volumes:
   neo4j_data:     # Graph relationships
@@ -77,4 +105,11 @@ volumes:
   redis_data:     # Quick access storage
   ollama_data:    # Local AI models
 
+# Platform-specific notes:
+# - For Mac with Apple Silicon: Set OLLAMA_DEVICE=mps in .env
+# - For Linux with NVIDIA: Set OLLAMA_DEVICE=cuda and uncomment nvidia device mounts
+# - For Linux with AMD: Set OLLAMA_DEVICE=rocm and uncomment AMD device mounts
+# - For Windows/Other: Leave OLLAMA_DEVICE=cpu or configure based on available hardware
+#
+# Memory settings are generous but can be adjusted based on available system resources
 # Your brain is safe in this bag! 🧠💼
