--- a/scramble/model_config/providers.example.yaml
+++ b/scramble/model_config/providers.example.yaml
@@ -9,14 +9,37 @@
 # OpenAi does not use anything before the model_id: {model_id}
 #
 # Both of these should work copied as is
-#
-#
 
 anthropic:
   format: anthropic/{model_id}
   api_key: default_anthropic_key_replace_me
   description: Anthropic's Claude models
 
+ollama:
+  format: {model_id}
+  api_key: not_needed  # Ollama doesn't require API key for local models
+  base_url: http://localhost:11434
+  description: Local models running via Ollama
+  # Provider-level options for all Ollama models
+  provider_options:
+    # Hardware utilization
+    num_gpu: 1              # Number of GPUs to use (0 for CPU only)
+    num_thread: 8           # Number of CPU threads for computation
+
+    # Advanced sampling parameters
+    mirostat: 0            # Mirostat sampling version (0 = disabled, 1 = v1, 2 = v2)
+    mirostat_eta: 0.1      # Mirostat learning rate (default: 0.1)
+    mirostat_tau: 5.0      # Mirostat target entropy (default: 5.0)
+
+    # Token generation controls
+    repeat_last_n: 64      # Number of tokens to look back for repetition
+    repeat_penalty: 1.1    # Penalty for repetition (1.0 = disabled, >1.0 = stronger)
+    tfs_z: 1              # Tail free sampling, higher = more focused (1.0 = disabled)
+    
+    # Reproducibility
+    seed: 42              # RNG seed (0 for random)
+
+# Other provider examples
 anthropic-aws:
   format: anthropic-aws/{model_id}
   api_key: default_anthropic_aws_key_replace_me
@@ -38,51 +61,11 @@ cohere:
   description: Cohere models
 
 google:
-  format: gemini/{model_id} ### Important! Unlike other providers, Google uses the format gemini/{model_id}
+  format: gemini/{model_id}  # Important! Unlike other providers, Google uses gemini/{model_id}
   api_key: default_google_key_replace_me
   description: Google AI models including Gemini
 
-huggingface:
-  format: huggingface/{model_id}
-  api_key: default_huggingface_key_replace_me
-  description: Hugging Face models and endpoints
-
-mistral:
-  format: mistral/{model_id}
-  api_key: default_mistral_key_replace_me
-  description: Mistral AI models
-
 openai:
-  format: {model_id}
+  format: {model_id}  # OpenAI uses just the model_id without prefix
   api_key: default_openai_key_replace_me
   description: OpenAI models including GPT-4 and DALL-E
-
-palm:
-  format: palm/{model_id}
-  api_key: default_palm_key_replace_me
-  description: Google PaLM models
-
-replicate:
-  format: replicate/{model_id}
-  api_key: default_replicate_key_replace_me
-  description: Replicate-hosted models
-
-sagemaker:
-  format: sagemaker/{model_id}
-  api_key: default_sagemaker_key_replace_me
-  description: AWS SageMaker deployed models
-
-together:
-  format: together/{model_id}
-  api_key: default_together_key_replace_me
-  description: Together.ai hosted models
-
-vertex_ai:
-  format: vertex_ai/{model_id}
-  api_key: default_vertex_ai_key_replace_me
-  description: Google Cloud Vertex AI models
-
-vllm:
-  format: vllm/{model_id}
-  api_key: default_vllm_key_replace_me
-  description: VLLM-deployed models
