--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,15 @@ dependencies = [
     "anthropic",
     "click",
     "sentence-transformers>=2.5.0",
-    "numpy",
+    "numpy<2",
     "dateparser",
     "textual",
     "pyte",
     "redis>=5.0.1",
-    "llama-index-core",  # Updated for latest Neo4j support
+    "llama-index-core>=0.12.0",  
     "llama-index-storage-docstore-redis",
-    "llama-index-graph-stores-neo4j", # Neo4j graph store
+    "llama-index-graph-stores-memgraph", # Neo4j graph store
+    "llama-index-llms-ollama", #local model for llamaindex
     "duckdb",
     "neo4j==5.26.0",
     "httpx>=0.26.0",
